# bird

./: .clang-format-ignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: compiler-env.cmake  utils.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  crosshair.cpp  crosshair.hpp  gl_object.cpp  gl_object.hpp  gl_objects.cpp  gl_objects.hpp  input.cpp  input.hpp  main.cpp  mesh.cpp  mesh.hpp  multiplayer.cpp  multiplayer.hpp  player_mesh.cpp  player_mesh.hpp  profiler.hpp  resource.rc  rocktree.cpp  rocktree.hpp  shader.cpp  shader.hpp  shader_context.cpp  shader_context.hpp  std_include.hpp  task_manager.cpp  task_manager.hpp  text_renderer.cpp  text_renderer.hpp  uint128_t.hpp  window.cpp  window.hpp
src/client/resources/shader/: world.fs.glsl  world.vs.glsl
src/client/rocktree/: bulk.cpp  bulk.hpp  generic_object.hpp  node.cpp  node.hpp  octant_identifier.hpp  planetoid.cpp  planetoid.hpp  rocktree.cpp  rocktree.hpp  rocktree_object.cpp  rocktree_object.hpp  rocktree_proto.hpp
src/client/world/: physics_character.hpp  physics_node.cpp  physics_node.hpp  physics_vector.hpp  world.hpp  world_mesh.cpp  world_mesh.hpp
src/common/: CMakeLists.txt
src/common/network/: address.hpp  manager.cpp  manager.hpp
src/common/utils/: cryptography.cpp  cryptography.hpp  finally.hpp  http.cpp  http.hpp  io.cpp  memory.cpp  memory.hpp  nt.cpp  nt.hpp  priority_mutex.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp
src/proto/: CMakeLists.txt  rocktree.proto
